--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Advice generator app</title>
-  
-
+  <link rel="stylesheet" href="style.css" rel="text/css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -18,33 +17,32 @@
 <body>
 
   <!-- Advice # Advice ID goes here -->
-  <div id="container">
+  <div class="container">
     <p>ADVICE #1</p>
     <h3>Loading....</h3>
-    <button type="reset">()</button>
+    <img src="images/icon-dice.svg" alt="icon-btn">
 
   <!-- Advice text goes here -->
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.github.com/morebymafe" target="_blank">morebymafe</a>.
   </div>
-
 
   <script>
     async function generate() {
-      const res = await fetch("https://api.adviceslip.com/advice");
-      const data = await res.json();
-      document.querySelector("p").innerText = "ADVICE #" + data.slip.id;
-      document.querySelector("h3").innerText = '"' + data.slip.advice  + '"';
-    }
+    const res = await fetch("https://api.adviceslip.com/advice");
+    const data = await res.json();
+    document.querySelector("p").innerText = "ADVICE #" + data.slip.id;
+    document.querySelector("h3").innerText = '"' + data.slip.advice  + '"';
+  }
 
+  generate();
+  document.querySelector('img').onclick = () => { 
     generate();
-    document.querySelector('button').onclick = () => { 
-      generate();
-    }
+  }
+</script>
 
-  </script>
 
 </body>
 </html>
