--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Vithkuqi:wght@600&family=Righteous&display=swap" rel="stylesheet">  
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(0, 0%, 0%); }
-    @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Holtwood+One+SC&family=Macondo&family=Righteous&display=swap');  </style>
+    .attribution { font-size: 11px; text-align: center; position: absolute; bottom: 5%; left: 15%; }
+    .attribution a { color: hsl(0, 0%, 0%); margin-top: 10px;}
+    @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Holtwood+One+SC&family=Macondo&family=Righteous&display=swap');  
+  </style>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 <body>
 
@@ -39,7 +41,13 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.github.com/morebymafe" target="_blank">morebymafe</a>.
+    Coded by <a href="https://www.github.com/morebymafe" target="_blank">morebymafe</a><br/>
+    <a class="twitter-share-button"
+      href="https://twitter.com/intent/tweet?text=Get%20motivated%20now!%20with%20a%20free%20advice">tweet</a>
+  </div>
+
+  <div>
+    
   </div>
 
   <script>
