Audio and dice edited

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
     <h6 class="colon">[|]</h6>
     <h3>Loading....</h3>
     <img src="images/pattern-divider-mobile.svg" alt="divider"><br>
-    <img id="dice" src="images/icon-dice.svg" alt="icon-btn">
-
+    <img class="dice" src="images/icon-dice.svg" alt="icon-btn">
   </div>
 
   <!-- Advice text goes here -->
 
   <div>
     <audio autoplay loop>
-    <source src="media/emotional-piano-153812.mp3" type="audio/mpeg">
+      <source src="https://docs.google.com/uc?export=download&id=18kKAfCs6LdQHUwU3jt2GPLQOTqDAzbhC">
+    </audio>
   </div>
   
   <div class="attribution">
