--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Vithkuqi:wght@600&family=Righteous&display=swap" rel="stylesheet">  
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; position: absolute; bottom: 3%; margin: 0 40px; }
-    .attribution a { color: hsl(0, 0%, 0%); margin-top: 10px;}
+    .attribution { font-family: 'poppins'; font-size: 11px; text-align: center; position: absolute; bottom: 3%; margin: 0 40px; }
+    .attribution a { color: hsl(0, 0%, 100%); margin-top: 10px;}
     @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Holtwood+One+SC&family=Macondo&family=Righteous&display=swap');  
   </style>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -28,7 +28,7 @@
     <h6 class="colon">[|]</h6>
     <h3>Loading....</h3>
     <img src="images/pattern-divider-mobile.svg" alt="divider"><br>
-    <img class="dice" src="images/icon-dice.svg" alt="icon-btn">
+    <img id="dice" src="images/icon-dice.svg" alt="icon-btn">
   </div>
 
   <!-- Advice text goes here -->
