--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
   <!-- Advice text goes here -->
 
   <div>
-    <audio autoplay loop>
-      <source src="https://docs.google.com/uc?export=download&id=18kKAfCs6LdQHUwU3jt2GPLQOTqDAzbhC">
-    </audio>
+    <audio src="https://docs.google.com/uc?export=download&id=18kKAfCs6LdQHUwU3jt2GPLQOTqDAzbhC" autoplay loop>
   </div>
   
   <div class="attribution">
