--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Advice text goes here -->
 
   <div>
-    <audio src="https://docs.google.com/uc?export=download&id=18kKAfCs6LdQHUwU3jt2GPLQOTqDAzbhC" autoplay loop>
+    <audio autoplay loop src="https://docs.google.com/uc?export=download&id=18kKAfCs6LdQHUwU3jt2GPLQOTqDAzbhC">
   </div>
   
   <div class="attribution">
