edited background music

--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
     .attribution a { color: hsl(0, 0%, 100%); margin-top: 10px;}
     @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Holtwood+One+SC&family=Macondo&family=Righteous&display=swap');  
   </style>
-  <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 <body>
-  <div class="elfsight-app-0fea005a-48d5-43d7-9dc7-7f6865db8c09"></div>
 
   <!-- Advice # Advice ID goes here -->
   <div class="container">
@@ -34,11 +32,16 @@
   </div>
 
   <!-- Advice text goes here -->
-  <!--
+  <!-- Elsight app
+      <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+      <div class="elfsight-app-0fea005a-48d5-43d7-9dc7-7f6865db8c09"></div>
+
   <div>
     <audio autoplay loop src="https://docs.google.com/uc?export=download&id=18kKAfCs6LdQHUwU3jt2GPLQOTqDAzbhC">
   </div>
   -->
+
+  <embed name="GoodEnough" src="./media/emotional-piano-153812.mp3" loop="true" hidden="true" autostart="true">
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
