--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
   -->
 
-  <embed name="GoodEnough" src="./media/emotional-piano-153812.mp3" loop hidden="true" autostart="true">
+  <embed name="GoodEnough" src="./media/emotional-piano-153812.mp3" loop="false" hidden="true" autostart="true">
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
